# PlaneOpt

./: .gitignore  .stylish-haskell.yaml  LICENSE.md  Makefile  PlaneOpt.cabal  README.md
executable/: Main.hs
other/: runxfoil.sh  script.xfoil  vars.txt
