author:                 Remy Goldschmidt
version:                0.0.1
build-type:             Simple
cabal-version:          >= 1.10
category:               Other
copyright:              2015 Remy Goldschmidt <taktoa@gmail.com>
description:            A plane optimizer
extra-source-files:     README.md
license-file:           LICENSE.md
license:                MIT
maintainer:             taktoa@gmail.com
name:                   PlaneOpt
synopsis:               A plane optimizer
tested-with:            GHC == 7.8

library
    build-depends:      base <5
    default-language:   Haskell2010
    exposed-modules:    Other.PlaneOpt
                        Other.PlaneOpt.Xfoil
                        -- GENERATE: New.Module
    ghc-options:        -Wall
    ghc-prof-options:   -auto-all -prof
    hs-source-dirs:     library
    default-extensions: OverloadedStrings

executable PlaneOpt
    build-depends:      base
                      , PlaneOpt
    default-language:   Haskell2010
    ghc-prof-options:   -auto-all -prof
    hs-source-dirs:     executable
    main-is:            Main.hs
    default-extensions: OverloadedStrings
